Добавил функционал по открытию модальных окон

--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,4 +1,7 @@
-$main-color: #F3AB9B;
-$inputs: #EEECEC;
-$disabled: #C1C1C1;
-$cancel: #EA0000;
+$main-color: #f3ab9b;
+$inputs: #eeecec;
+$disabled: #c1c1c1;
+$cancel: rgb(234 0 0);
+$cancel-80: rgb(234 0 0 / 80%);
+$black-text-70: rgb(0 0 0 / 70%);
+$black-text-50: rgb(0 0 0 / 50%);
