--- a/client/src/style/style.scss
+++ b/client/src/style/style.scss
@@ -31,10 +31,7 @@ aside {
 }
 html {
     background: linear-gradient(75.02deg, #f3ab9b 0.85%, #ec917a 99.7%);
-}
-
-body {
-    position: relative;
+    scrollbar-gutter: stable;
 }
 html,
 body {
@@ -54,8 +51,9 @@ textarea {
 }
 input::-ms-clear {
     display: none;
-} /*крестик в поле для ввода в  интернете explorer*/
+}
 button {
+    border: none;
     cursor: pointer;
     background: transparent;
 }
