Добавил UI компонент Button

--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -5,3 +5,6 @@ $cancel: rgb(234 0 0);
 $cancel-80: rgb(234 0 0 / 80%);
 $black-text-70: rgb(0 0 0 / 70%);
 $black-text-50: rgb(0 0 0 / 50%);
+$black-text-40: rgb(0 0 0 / 40%);
+$white-background: #ffffff;
+$red-border: rgba(243 171 155 / 50%);
