Изменил названия компонентов, поменял вертстку, поменял стили, добавил компонент с календарем, оставилл комментарии для следующих задач

--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -8,3 +8,5 @@ $black-text-50: rgb(0 0 0 / 50%);
 $black-text-40: rgb(0 0 0 / 40%);
 $white-background: #ffffff;
 $red-border: rgba(243 171 155 / 50%);
+$active-date: #ffff76;
+$range-date: #ebbbab;
